--- a/uds_communications/Uds/udsConfig.ini
+++ b/uds_communications/Uds/udsConfig.ini
@@ -1,8 +1,13 @@
 [DEFAULT]
-tpInterface=CAN
+    [uds]
+    tpInterface=CAN
 
     [canTp]
     reqId=0x600
     resId=0x650
 
-    
+    [uds]
+    p2_server=1
+    p2_client=1
+
+
