Added functionality to deal with different addressing types

--- a/uds/uds_communications/TransportProtocols/Can/config.ini
+++ b/uds/uds_communications/TransportProtocols/Can/config.ini
@@ -1,7 +1,11 @@
 [canTp]
 reqId=0x600
 resId=0x650
-addressingType=NORMAL_FIXED
+addressingType=NORMAL
+N_SA=0xFF
+N_TA=0xFF
+N_AE=0xFF
+Mtype=DIAGNOSTICS
 
 [can]
 interface=virtual
@@ -11,7 +15,7 @@ baudrate=500000
 interfaceName=virtualInterface
 
 [peak]
-device=PCANUSB_BUS1
+device=PCAN_USBBUS1
 
 [vector]
 appName=testApp
