Fixed issue with UdsConfigTool creating ECUs with default CAN ids. Added documentation

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,4 @@
-include uds_configuration\defaultConfig.ini
+include uds\uds_configuration\defaultConfig.ini
+include uds\uds_communications\Uds\config.ini
+include uds\uds_communications\TransportProtocols\config.ini
+include uds\uds_communications\TransportProtocols\Can\config.ini
