Added examples and added exceptions to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ dist/
 build/
 .idea/
 *.pyc
+test/Uds-Config-Tool/Functional Tests/*.log
+test/Uds-Config-Tool/Functional Tests/*.ihex
+test/Uds-Config-Tool/Functional Tests/*.hex
