added entries to gitignore, removed CDD file

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ build/
 test/Uds-Config-Tool/Functional Tests/*.log
 test/Uds-Config-Tool/Functional Tests/*.ihex
 test/Uds-Config-Tool/Functional Tests/*.hex
+*.cdd
 *.cdd~
