--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include uds\uds_configuration\defaultConfig.ini
 include uds\uds_communications\Uds\config.ini
 include uds\uds_communications\TransportProtocols\config.ini
 include uds\uds_communications\TransportProtocols\Can\config.ini
+include uds\uds_communications\TransportProtocols\Lin\config.ini
