--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include uds\uds_communications\Uds\config.ini
 include uds\uds_communications\TransportProtocols\config.ini
 include uds\uds_communications\TransportProtocols\Can\config.ini
 include uds\uds_communications\TransportProtocols\Lin\config.ini
+uds\uds_communications\TransportProtocols\Doip\config.ini
